--- a/meauxbility-dashboard-clay.html
+++ b/meauxbility-dashboard-clay.html
@@ -6,13 +6,13 @@
 <title>Meauxbility Dashboard</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
-#meaux-dashboard{--teal-950:#0a1416;--teal-900:#0f1f22;--teal-800:#1a2f33;--teal-700:#176B78;--teal-600:#1F97A9;--teal-500:#1F97A9;--teal-400:#3AAFBF;--teal-300:#5eead4;--teal-200:#99f6e4;--teal-100:#ccfbf1;--teal-50:#f0fdfa;--orange:#FF7619;--green:#21c48c;--green-light:#51e9ae;--gold:#E2AF1D;--glass:rgba(15,31,34,.85);--border:rgba(31,151,169,.30);--ink:#f0fdfa;--ink-muted:#ccfbf1;--shadow-soft:0 10px 40px rgba(0,0,0,.3);--shadow-intense:0 25px 100px rgba(0,0,0,.4);--radius-sm:8px;--radius-md:16px;--radius-lg:24px;--radius-xl:32px;--t-base:.4s cubic-bezier(.4,0,.2,1);--t-slow:.8s cubic-bezier(.4,0,.2,1);font-family:Inter,system-ui,sans-serif;color:var(--ink);position:relative;background:var(--ink);min-height:100vh;isolation:isolate}
+#meaux-dashboard{--teal-950:#0a1416;--teal-900:#0f1f22;--teal-800:#1a2f33;--teal-700:#176B78;--teal-600:#1F97A9;--teal-500:#1F97A9;--teal-400:#3AAFBF;--teal-300:#5eead4;--teal-200:#99f6e4;--teal-100:#ccfbf1;--teal-50:#f0fdfa;--orange:#FF7619;--green:#21c48c;--green-light:#51e9ae;--gold:#E2AF1D;--glass:rgba(15,31,34,.85);--border:rgba(31,151,169,.30);--ink:#f0fdfa;--ink-muted:#ccfbf1;--shadow-soft:0 10px 40px rgba(0,0,0,.3);--shadow-intense:0 25px 100px rgba(0,0,0,.4);--radius-sm:8px;--radius-md:16px;--radius-lg:24px;--radius-xl:32px;--t-base:.4s cubic-bezier(.4,0,.2,1);--t-slow:.8s cubic-bezier(.4,0,.2,1);font-family:Inter,system-ui,sans-serif;color:var(--ink);position:relative;background:linear-gradient(135deg,var(--teal-950),var(--teal-900)) !important;min-height:100vh;isolation:isolate;contain:layout style paint;transform:translateZ(0);width:100% !important;max-width:100vw !important;overflow-x:hidden !important;z-index:1}
 #meaux-dashboard *{margin:0;padding:0;box-sizing:border-box}
 #meaux-dashboard .login-screen{position:fixed;top:0;left:0;right:0;bottom:0;background:linear-gradient(135deg,var(--teal-950) 0%,var(--teal-900) 30%,var(--teal-800) 70%,var(--teal-700) 100%);display:flex;align-items:center;justify-content:center;z-index:10000;transition:opacity 0.3s ease,visibility 0.3s ease}
 #meaux-dashboard .login-screen.hidden{opacity:0;visibility:hidden}
 #meaux-dashboard .login-card{background:var(--glass);border:2px solid var(--border);border-radius:var(--radius-xl);backdrop-filter:blur(25px);box-shadow:var(--shadow-intense);width:100%;max-width:400px;text-align:center;padding:3rem;position:relative;overflow:hidden}
 #meaux-dashboard .login-card::before{content:'';position:absolute;top:-50%;left:-50%;width:200%;height:200%;background:radial-gradient(circle,rgba(58,175,191,0.1) 0%,transparent 70%);animation:float-bg 8s ease-in-out infinite}
-#meaux-dashboard .login-title{font-size:2rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--teal-600));-webkit-background-clip:text;color:transparent;margin-bottom:0.5rem;position:relative;z-index:2}
+#meaux-dashboard .login-title{font-size:2rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--teal-600));-webkit-background-clip:text;background-clip:text;color:transparent;margin-bottom:0.5rem;position:relative;z-index:2}
 #meaux-dashboard .login-subtitle{color:var(--ink-muted);margin-bottom:2rem;position:relative;z-index:2;opacity:0.9}
 #meaux-dashboard .login-form{display:flex;flex-direction:column;gap:1.5rem;position:relative;z-index:2}
 #meaux-dashboard .form-group{text-align:left}
@@ -30,7 +30,7 @@
 #meaux-dashboard .sidebar{width:280px;background:var(--glass);border-right:2px solid var(--border);backdrop-filter:blur(25px);position:fixed;top:0;left:0;height:100vh;overflow-y:auto;z-index:1000;transition:transform 0.3s ease}
 #meaux-dashboard .sidebar.collapsed{width:80px}
 #meaux-dashboard .sidebar-header{padding:1.5rem;border-bottom:2px solid var(--border);text-align:center}
-#meaux-dashboard .sidebar-title{font-size:1.5rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--green));-webkit-background-clip:text;color:transparent;opacity:1;transition:opacity 0.3s ease}
+#meaux-dashboard .sidebar-title{font-size:1.5rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--green));-webkit-background-clip:text;background-clip:text;color:transparent;opacity:1;transition:opacity 0.3s ease}
 #meaux-dashboard .sidebar.collapsed .sidebar-title{opacity:0}
 #meaux-dashboard .sidebar-nav{padding:1rem 0}
 #meaux-dashboard .nav-item{display:flex;align-items:center;gap:1rem;padding:1rem 1.5rem;color:var(--ink-muted);text-decoration:none;transition:var(--t-base);border-left:3px solid transparent}
@@ -43,10 +43,10 @@
 #meaux-dashboard .sidebar-toggle{display:none;position:fixed;top:1rem;left:1rem;z-index:1001;background:var(--glass);border:2px solid var(--border);border-radius:var(--radius-md);padding:0.5rem;cursor:pointer;backdrop-filter:blur(20px);color:var(--ink);font-size:1.25rem}
 #meaux-dashboard .dashboard-header{position:sticky;top:0;background:var(--glass);border-bottom:2px solid var(--border);backdrop-filter:blur(25px);padding:1.5rem 2rem;z-index:100;display:flex;align-items:center;justify-content:space-between;transform:translateY(0);transition:transform 0.3s ease}
 #meaux-dashboard .dashboard-header.hidden{transform:translateY(-100%)}
-#meaux-dashboard .header-title{font-size:1.75rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--green));-webkit-background-clip:text;color:transparent}
+#meaux-dashboard .header-title{font-size:1.75rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--green));-webkit-background-clip:text;background-clip:text;color:transparent}
 #meaux-dashboard .header-filters{display:flex;gap:1rem;align-items:center}
 #meaux-dashboard .filter-select{padding:0.5rem 1rem;border:2px solid var(--border);border-radius:var(--radius-md);background:var(--glass);color:var(--ink);cursor:pointer;backdrop-filter:blur(10px)}
-#meaux-dashboard .main-content{flex:1;margin-left:280px;transition:margin-left 0.3s ease}
+#meaux-dashboard .main-content{flex:1;margin-left:280px;transition:margin-left 0.3s ease;width:calc(100vw - 280px) !important;max-width:calc(100vw - 280px) !important;overflow-x:hidden !important}
 #meaux-dashboard .sidebar.collapsed + .main-content{margin-left:80px}
 #meaux-dashboard .container{max-width:1440px;margin:0 auto;padding:2rem}
 #meaux-dashboard .page-section{display:none}
@@ -58,7 +58,7 @@
 #meaux-dashboard .stat-card:hover::before{opacity:1}
 #meaux-dashboard .stat-header{display:flex;align-items:center;justify-content:space-between;margin-bottom:1.5rem}
 #meaux-dashboard .stat-icon{width:4rem;height:4rem;border-radius:var(--radius-lg);display:flex;align-items:center;justify-content:center;font-size:2rem;background:linear-gradient(135deg,var(--teal-400),var(--green));color:var(--teal-950);box-shadow:var(--shadow-soft)}
-#meaux-dashboard .stat-value{font-size:3rem;font-weight:900;background:linear-gradient(135deg,var(--ink),var(--teal-100));-webkit-background-clip:text;color:transparent;margin-bottom:0.5rem}
+#meaux-dashboard .stat-value{font-size:3rem;font-weight:900;background:linear-gradient(135deg,var(--ink),var(--teal-100));-webkit-background-clip:text;background-clip:text;color:transparent;margin-bottom:0.5rem}
 #meaux-dashboard .stat-label{color:var(--ink-muted);font-weight:600;font-size:1.1rem}
 #meaux-dashboard .stat-change{font-size:0.875rem;font-weight:700;padding:0.5rem 1rem;border-radius:var(--radius-sm);background:rgba(33,196,140,.2);color:var(--green-light)}
 #meaux-dashboard .donation-visual{margin-top:1rem;position:relative}
@@ -73,7 +73,7 @@
 #meaux-dashboard .card:hover{transform:translateY(-2px);box-shadow:var(--shadow-intense);border-color:var(--teal-400)}
 #meaux-dashboard .card:hover::before{left:100%}
 #meaux-dashboard .card-header{display:flex;align-items:center;margin-bottom:2rem}
-#meaux-dashboard .card-title{font-size:1.5rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--green));-webkit-background-clip:text;color:transparent}
+#meaux-dashboard .card-title{font-size:1.5rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--green));-webkit-background-clip:text;background-clip:text;color:transparent}
 #meaux-dashboard .card-icon{width:3rem;height:3rem;border-radius:var(--radius-md);display:flex;align-items:center;justify-content:center;font-size:1.5rem;margin-right:1rem;background:linear-gradient(135deg,var(--teal-400),var(--green));color:var(--teal-950);box-shadow:var(--shadow-soft)}
 #meaux-dashboard .content-grid{display:grid;grid-template-columns:2fr 1fr;gap:2rem}
 #meaux-dashboard .table-container{overflow-x:auto;border-radius:var(--radius-lg);border:2px solid var(--border);background:var(--glass);backdrop-filter:blur(25px)}
@@ -99,7 +99,7 @@
 #meaux-dashboard .modal.active{display:flex}
 #meaux-dashboard .modal-content{background:var(--glass);border:2px solid var(--border);border-radius:var(--radius-xl);backdrop-filter:blur(25px);max-width:600px;width:90%;max-height:80vh;overflow-y:auto;box-shadow:var(--shadow-intense);animation:modalSlideIn 0.4s cubic-bezier(0.4,0,0.2,1)}
 #meaux-dashboard .modal-header{padding:2rem 2rem 1rem;border-bottom:2px solid var(--border);display:flex;align-items:center;justify-content:space-between}
-#meaux-dashboard .modal-title{font-size:1.75rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--green));-webkit-background-clip:text;color:transparent}
+#meaux-dashboard .modal-title{font-size:1.75rem;font-weight:800;background:linear-gradient(135deg,var(--teal-400),var(--green));-webkit-background-clip:text;background-clip:text;color:transparent}
 #meaux-dashboard .modal-close{background:none;border:none;font-size:2rem;cursor:pointer;color:var(--ink-muted);padding:0.5rem;border-radius:var(--radius-md);transition:var(--t-base);width:3rem;height:3rem;display:flex;align-items:center;justify-content:center}
 #meaux-dashboard .modal-close:hover{background:rgba(255,118,25,.2);color:var(--orange)}
 #meaux-dashboard .modal-body{padding:2rem}
@@ -124,7 +124,7 @@
 #meaux-dashboard .sidebar.active{transform:translateX(0)}
 #meaux-dashboard .sidebar-overlay.active{display:block}
 #meaux-dashboard .sidebar-toggle{display:flex;align-items:center;justify-content:center}
-#meaux-dashboard .main-content{margin-left:0}
+#meaux-dashboard .main-content{margin-left:0 !important;width:100vw !important;max-width:100vw !important}
 #meaux-dashboard .stats-grid{grid-template-columns:1fr}
 #meaux-dashboard .container{padding:1rem}
 #meaux-dashboard .dashboard-header{padding:1rem}
@@ -596,7 +596,7 @@ async function loadDashboardData(){animateValue(document.getElementById('totalDo
 async function loadDonationsData(){try{setTimeout(()=>{animateValue(document.getElementById('donationsTotal'),0,35280,2000);animateValue(document.getElementById('donationsCount'),0,4657,1500);animateValue(document.getElementById('avgDonation'),0,75,1000);animateValue(document.getElementById('recurringDonors'),0,234,1200);const table=document.getElementById('donationsTable');table.innerHTML=`<tr><td>John Smith</td><td>$50.00</td><td>Monthly</td><td>2024-01-15</td><td><span class="status-badge success">Completed</span></td></tr><tr><td>Sarah Johnson</td><td>$100.00</td><td>One-time</td><td>2024-01-14</td><td><span class="status-badge success">Completed</span></td></tr><tr><td>Mike Wilson</td><td>$25.00</td><td>Monthly</td><td>2024-01-13</td><td><span class="status-badge success">Completed</span></td></tr>`},1000)}catch(error){console.error('Error loading donations:',error)}}
 function animateValue(element,start,end,duration){if(!element)return;const range=end-start;const increment=range/(duration/16);let current=start;const timer=setInterval(()=>{current+=increment;if(current>=end){current=end;clearInterval(timer)}if(element.id.includes('Donation')||element.id.includes('Total')){element.textContent='$'+Math.floor(current).toLocaleString()}else{element.textContent=Math.floor(current).toLocaleString()}},16)}
 async function testConnection(service){const statusElement=document.getElementById(service+'Status');if(!statusElement)return;statusElement.textContent='Testing...';statusElement.className='status-badge warning';setTimeout(()=>{statusElement.textContent='Connected';statusElement.className='status-badge connected'},2000)}
-document.addEventListener('DOMContentLoaded',function(){checkAuth();document.querySelectorAll('.nav-item').forEach(link=>{link.addEventListener('click',function(e){e.preventDefault();e.stopPropagation();const sectionId=this.dataset.section;if(sectionId)showSection(sectionId);if(window.innerWidth<=768)closeSidebar()})});const sidebarToggle=document.getElementById('sidebarToggle');if(sidebarToggle){sidebarToggle.addEventListener('click',function(e){e.preventDefault();e.stopPropagation();toggleSidebar()})}const sidebarOverlay=document.getElementById('sidebarOverlay');if(sidebarOverlay){sidebarOverlay.addEventListener('click',function(e){e.preventDefault();e.stopPropagation();closeSidebar()})}document.querySelectorAll('.modal').forEach(modal=>{modal.addEventListener('click',function(e){if(e.target===this){e.preventDefault();e.stopPropagation();this.classList.remove('active');document.body.style.overflow=''}})});document.addEventListener('keydown',function(e){if(e.key==='Escape'){document.querySelectorAll('.modal.active').forEach(modal=>{modal.classList.remove('active')});document.body.style.overflow=''}});['click','keypress','scroll','mousemove'].forEach(event=>{document.addEventListener(event,startSessionTimer,true)});window.addEventListener('resize',function(){if(window.innerWidth>768){closeSidebar()}})});
+document.addEventListener('DOMContentLoaded',function(){checkAuth();document.querySelectorAll('#meaux-dashboard .nav-item').forEach(link=>{link.addEventListener('click',function(e){e.preventDefault();e.stopPropagation();e.stopImmediatePropagation();const sectionId=this.getAttribute('data-section');if(sectionId&&typeof showSection==='function'){showSection(sectionId)}if(window.innerWidth<=768)closeSidebar();return false},true)});const sidebarToggle=document.getElementById('sidebarToggle');if(sidebarToggle){sidebarToggle.addEventListener('click',function(e){e.preventDefault();e.stopPropagation();toggleSidebar()})}const sidebarOverlay=document.getElementById('sidebarOverlay');if(sidebarOverlay){sidebarOverlay.addEventListener('click',function(e){e.preventDefault();e.stopPropagation();closeSidebar()})}document.querySelectorAll('.modal').forEach(modal=>{modal.addEventListener('click',function(e){if(e.target===this){e.preventDefault();e.stopPropagation();this.classList.remove('active');document.body.style.overflow=''}})});document.addEventListener('keydown',function(e){if(e.key==='Escape'){document.querySelectorAll('.modal.active').forEach(modal=>{modal.classList.remove('active')});document.body.style.overflow=''}});['click','keypress','scroll','mousemove'].forEach(event=>{document.addEventListener(event,startSessionTimer,true)});window.addEventListener('resize',function(){if(window.innerWidth>768){closeSidebar()}})});
 </script>
 </body>
 </html>
