--- a/meauxbility-final-dashboard.html
+++ b/meauxbility-final-dashboard.html
@@ -11,7 +11,9 @@
 #meaux-dashboard .login-screen{position:fixed;top:0;left:0;right:0;bottom:0;background:linear-gradient(135deg,var(--meaux-deep) 0%,var(--meaux-dark) 30%,var(--meaux-teal-steel) 100%);display:flex;align-items:center;justify-content:center;z-index:10000;transition:opacity 0.3s ease,visibility 0.3s ease}
 #meaux-dashboard .login-screen.hidden{opacity:0;visibility:hidden}
 #meaux-dashboard .login-card{background:var(--meaux-glass);border:2px solid var(--meaux-border);border-radius:16px;backdrop-filter:blur(25px);box-shadow:var(--meaux-shadow-lg);width:100%;max-width:400px;text-align:center;padding:3rem;position:relative;overflow:hidden}
-#meaux-dashboard .login-card::before{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:url('https://cdn.shopify.com/3d/models/4b0a47ca8a38b77c/Kinetic_Symmetry_0831084700_generate.glb');background-size:contain;background-repeat:no-repeat;background-position:center;opacity:0.1;animation:float-3d 12s ease-in-out infinite;z-index:1}
+#meaux-dashboard .login-3d-model{position:absolute;top:10%;left:10%;width:200px;height:200px;background:url('https://cdn.shopify.com/3d/models/4b0a47ca8a38b77c/Kinetic_Symmetry_0831084700_generate.glb');background-size:contain;background-repeat:no-repeat;background-position:center;opacity:0.3;z-index:1;pointer-events:none;animation:complexFloat 20s ease-in-out infinite,complexRotation 15s linear infinite;filter:drop-shadow(0 0 20px rgba(58,139,152,0.4))}
+#meaux-dashboard .login-3d-model-2{position:absolute;bottom:15%;right:15%;width:150px;height:150px;background:url('https://cdn.shopify.com/3d/models/4b0a47ca8a38b77c/Kinetic_Symmetry_0831084700_generate.glb');background-size:contain;background-repeat:no-repeat;background-position:center;opacity:0.2;z-index:1;pointer-events:none;animation:complexFloat2 25s ease-in-out infinite reverse,complexRotation 18s linear infinite reverse;filter:drop-shadow(0 0 15px rgba(255,118,25,0.3))}
+#meaux-dashboard .login-3d-model-3{position:absolute;top:60%;left:5%;width:120px;height:120px;background:url('https://cdn.shopify.com/3d/models/4b0a47ca8a38b77c/Kinetic_Symmetry_0831084700_generate.glb');background-size:contain;background-repeat:no-repeat;background-position:center;opacity:0.15;z-index:1;pointer-events:none;animation:complexFloat3 30s ease-in-out infinite,complexRotation 12s linear infinite;filter:drop-shadow(0 0 10px rgba(33,196,140,0.3))}
 #meaux-dashboard .login-title{font-size:2rem;font-weight:800;background:linear-gradient(135deg,var(--meaux-shine),var(--meaux-light-teal));-webkit-background-clip:text;background-clip:text;color:transparent;margin-bottom:0.5rem;position:relative;z-index:2}
 #meaux-dashboard .login-subtitle{color:var(--meaux-surface);margin-bottom:2rem;position:relative;z-index:2;opacity:0.9}
 #meaux-dashboard .form-input{width:100%;padding:1rem 1.25rem;background:rgba(10,36,39,.6);border:2px solid var(--meaux-border);border-radius:14px;color:var(--meaux-surface);font-size:1rem;transition:all 0.3s ease}
@@ -118,7 +120,10 @@
 #meaux-debug-item.error{background:rgba(231,76,60,0.2);color:var(--meaux-error)}
 #meaux-debug-item.warning{background:rgba(245,158,11,0.2);color:var(--meaux-warning)}
 #meaux-debug-item.success{background:rgba(33,196,140,0.2);color:var(--meaux-success)}
-@keyframes float-3d{0%,100%{transform:translate(0,0) rotate(0deg) scale(1)}33%{transform:translate(10px,-5px) rotate(2deg) scale(1.02)}66%{transform:translate(-5px,8px) rotate(-1deg) scale(0.98)}}
+@keyframes complexRotation{0%{transform:rotateY(0deg) rotateX(0deg) rotateZ(0deg)}100%{transform:rotateY(360deg) rotateX(360deg) rotateZ(360deg)}}
+@keyframes complexFloat{0%{transform:translate(0,0) scale(1)}25%{transform:translate(calc(80vw - 200px),20vh) scale(1.1)}50%{transform:translate(calc(70vw - 200px),calc(70vh - 200px)) scale(0.9)}75%{transform:translate(10vw,calc(60vh - 200px)) scale(1.05)}100%{transform:translate(0,0) scale(1)}}
+@keyframes complexFloat2{0%{transform:translate(0,0) scale(1)}25%{transform:translate(-60vw,30vh) scale(0.8)}50%{transform:translate(-50vw,-40vh) scale(1.2)}75%{transform:translate(-20vw,-20vh) scale(0.95)}100%{transform:translate(0,0) scale(1)}}
+@keyframes complexFloat3{0%{transform:translate(0,0) scale(1)}33%{transform:translate(70vw,-30vh) scale(1.1)}66%{transform:translate(40vw,20vh) scale(0.85)}100%{transform:translate(0,0) scale(1)}}
 @keyframes pulse-error{0%,100%{border-color:var(--meaux-error)}50%{border-color:rgba(231,76,60,0.5)}}
 @media (max-width:1024px){
 #meaux-dashboard .sidebar{width:80px}
@@ -145,6 +150,9 @@
 #meaux-dashboard .modal-header,#meaux-dashboard .modal-body{padding:1.5rem}
 #meaux-dashboard .mbx-btn{padding:12px 20px;font-size:14px}
 #meaux-dashboard .tool-card{min-width:180px;padding:1rem}
+#meaux-dashboard .login-3d-model{width:120px;height:120px;opacity:0.2}
+#meaux-dashboard .login-3d-model-2{width:100px;height:100px;opacity:0.15}
+#meaux-dashboard .login-3d-model-3{width:80px;height:80px;opacity:0.1}
 }
 @media (prefers-reduced-motion:reduce){
 #meaux-dashboard *{animation:none !important;transition:none !important}
@@ -154,6 +162,10 @@
 <body>
 <div id="meaux-dashboard">
 <div class="login-screen" id="loginScreen">
+<!-- Floating 3D Models -->
+<div class="login-3d-model"></div>
+<div class="login-3d-model-2"></div>
+<div class="login-3d-model-3"></div>
 <div class="login-card">
 <h1 class="login-title">Ultimate Dashboard</h1>
 <p class="login-subtitle">Volunteer Automation Hub</p>
